--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "rewrites": [
     {
-      // Exclude API routes, Next/Vercel assets, and any request containing a dot (file extensions)
-      "source": "/((?!api/|_next/|.*\..*).*)",
+      "source": "/((?!.*\\.).*)",
       "destination": "/index.html"
     }
   ]
